--- a/Lenguaje de marcas/HTML/T4b/ejer1.html
+++ b/Lenguaje de marcas/HTML/T4b/ejer1.html
@@ -3,8 +3,26 @@
 <head>
     <title>Curriculum Vitae de Bruce Wayne</title>
     <meta charset="UTF-8">
+    <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #dddddd;
+        }
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            padding: 8px;
+        }
+    </style>
 </head>
 <body>
+
     <h1>Los tres pilares de la Web</h1>
 
     <p><a href="http://es.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a> es considerado el padre de la Web porque desarrolló los tres elementos básicos para el funcionamiento de la Web:</p>
