--- a/Lenguaje de marcas/HTML/architexture/index.html
+++ b/Lenguaje de marcas/HTML/architexture/index.html
@@ -24,8 +24,8 @@
 	</nav><!-- end of top nav -->
 	
 	<header><!-- header -->
-		<div id="plandesign"><img src="images/plans.png" alt="" /></div>
-		<h1><a href="#">ArchiteXture</a></h1>
+		<div id="plandesign"><img src="images/cthulu2.jpg" alt="" /></div>
+		<h1><a href="#">Lovecraft Myths</a></h1>
 		<p>Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
 	</header><!-- end of header -->
 	
